fix: extension button being invisible when using Fluenty theme

--- a/public/extendium.scss
+++ b/public/extendium.scss
@@ -70,6 +70,10 @@ $secondary-text-color: rgba(255, 255, 255, 0.6);
       width: 100%;
       height: 100%;
     }
+
+    svg {
+      display: block !important;
+    }
   }
 }
 
